--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700">
     <link rel="stylesheet" href="assets\css\plugins.min.css" type="text/css" media="screen">
     <link rel="stylesheet" href="assets\css\style.css" type="text/css" media="screen">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body>
+<body class="mat-typography">
 
   <app-root></app-root>
 
