--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Isaac Rodriguez | CV </title>
+    <title>Isaac Rodriguez | CH </title>
     <meta name="description" content="Anderson Bastidas CV">
     <meta name="author" content="LionCoders">
     <link rel="icon" href="images\favicon.ico">
